made a code base to work for C#

--- a/Mod Container/UncannyValleyMod/manifest.json
+++ b/Mod Container/UncannyValleyMod/manifest.json
@@ -7,4 +7,7 @@
   "EntryDll": "UncannyValleyMod.dll",
   "MinimumApiVersion": "3.0.0",
   "UpdateKeys": []
+  //"ContentPackFor": {
+    //"UniqueID": "Pathoschild.ContentPatcher"
+  //}
 }
