added in the new custom weapon

--- a/Mod Container/UncannyValleyMod/manifest.json
+++ b/Mod Container/UncannyValleyMod/manifest.json
@@ -6,8 +6,8 @@
   "UniqueID": "JacobSisco.UncannyValleyMod",
   "EntryDll": "UncannyValleyMod.dll",
   "MinimumApiVersion": "3.0.0",
-  "UpdateKeys": []
-  //"ContentPackFor": {
+  "UpdateKeys": [] //,
+  //"Dependencies": {
     //"UniqueID": "Pathoschild.ContentPatcher"
   //}
 }
