--- a/Mod Container/UncannyValleyMod/manifest.json
+++ b/Mod Container/UncannyValleyMod/manifest.json
@@ -11,6 +11,14 @@
     {
       "UniqueID": "Pathoschild.ContentPatcher",
       "MinimumVersion": "1.30.0"
+    },
+    {
+      "UniqueID": "Purrplingcat.QuestFramework",
+      "MinimumVersion": "1.4.0"
+    },
+    {
+      "UniqueID": "Purrplingcat.QuestEssentials",
+      "MinimumVersion": "1.0.0"
     }
   ]
 }
