--- a/CustomMaps/manifest.json
+++ b/CustomMaps/manifest.json
@@ -1,5 +1,5 @@
 {
-    "Name": "CustomMaps",
+"Name": "[CP] UncannyValley Custom Maps",
     "Author": "Justin Walraven",
     "Version": "1.0.0",
     "Description": "Custom maps for our mod, this includes pelican town, mansion exterior and interior",
