Shop now sells modded sword for 150g

--- a/Mod Container/[SF] UncannyValleyShop/manifest.json
+++ b/Mod Container/[SF] UncannyValleyShop/manifest.json
@@ -8,5 +8,12 @@
     "UpdateKeys": [],
 	"ContentPackFor": {
 		"UniqueID": "Cherry.ShopTileFramework"
-	}
+	},
+	"Dependencies": [
+		{
+			"UniqueID": "JacobSisco.UncannyValleyMod",
+			"MinimumVersion": "0.0.1"
+		}
+	]
 }
+
