Standardized manifest data (UniqueIDs, names, authors

--- a/Mod Container/UncannyValleyMod/manifest.json
+++ b/Mod Container/UncannyValleyMod/manifest.json
@@ -1,9 +1,9 @@
 {
   "Name": "UncannyValleyMod",
-  "Author": "Jacob Sisco",
+  "Author": "UncannyValley",
   "Version": "1.0.0",
   "Description": "Horror mod for Stardew Valley",
-  "UniqueID": "JacobSisco.UncannyValleyMod",
+  "UniqueID": "UncannyValley.UncannyValleyMod",
   "EntryDll": "UncannyValleyMod.dll",
   "MinimumApiVersion": "3.0.0",
   "UpdateKeys": [] ,
