--- a/[CP] UncannyValleyMaps/manifest.json
+++ b/[CP] UncannyValleyMaps/manifest.json
@@ -1,9 +1,9 @@
 {
-    "Name": "CustomMaps",
-    "Author": "Justin Walraven",
+    "Name": "UncannyValleyMaps",
+    "Author": "UncannyValley",
     "Version": "1.0.0",
     "Description": "Custom maps for our mod, this includes pelican town, mansion exterior and interior",
-    "UniqueID": "JustinWalraven.CustomMaps",
+    "UniqueID": "UncannyValley.UncannyValleyMaps",
     "UpdateKeys": [],
     "ContentPackFor": {
         "UniqueID": "Pathoschild.ContentPatcher"
