--- a/Mod Container/UncannyValleyMod/UncannyValleyMod.csproj
+++ b/Mod Container/UncannyValleyMod/UncannyValleyMod.csproj
@@ -7,6 +7,7 @@
 	<ItemGroup>
 		<PackageReference Include="Pathoschild.Stardew.ModBuildConfig" Version="4.1.1" />
 		<Reference Include="ContentPatcher" HintPath="$(GameModsPath)\ContentPatcher\ContentPatcher.dll" Private="False" />
+		<Reference Include="SpaceCore" HintPath="$(GameModsPath)\SpaceCore\SpaceCore.dll" Private="False" />
 		<Reference Include="QuestFramework" HintPath="$(GameModsPath)\QuestFramework\QuestFramework.dll" Private="False" />
 		<Reference Include="QuestEssentials" HintPath="$(GameModsPath)\QuestEssentials\QuestEssentials.dll" Private="False" />
 	</ItemGroup>
