Starting to implement quests

--- a/Mod Container/[QF] UncannyValleyQuest/manifest.json
+++ b/Mod Container/[QF] UncannyValleyQuest/manifest.json
@@ -1,13 +1,27 @@
 {
-    "Name": "UncannyValleyTestQuest",
-    "Author": "UncannyValley",
-    "Version": "1.0.0",
-    "Description": "Uncanny Valley Quests",
-    "UniqueID": "UncannyValley.UncannyValleyQuest",
-    "MinimumApiVersion": "3.6.0",
-    "UpdateKeys": [],
-    "ContentPackFor": {
-      "UniqueID": "PurrplingCat.QuestFramework", 
-      "MinimumVersion": "1.2.0" 
+  "Name": "UncannyValleyQuest",
+  "Author": "UncannyValley",
+  "Version": "1.0.0",
+  "Description": "Uncanny Valley Quests",
+  "UniqueID": "UncannyValley.UncannyValleyQuest",
+  "MinimumApiVersion": "3.6.0",
+  "UpdateKeys": [],
+  "ContentPackFor": {
+    "UniqueID": "PurrplingCat.QuestFramework",
+    "MinimumVersion": "1.2.0"
+  },
+  "Dependencies": [
+    {
+      "UniqueID": "PurrplingCat.QuestEssentials",
+      "MinimumVersion": "0.0.1"
+    },
+    {
+      "UniqueID": "UncannyValley.UncannyValleyNPCTest",
+      "MinimumVersion": "0.0.1"
+    },
+    {
+      "UniqueID": "UncannyValley.UncannyValleyMaps",
+      "MinimumVersion": "0.0.1"
     }
-  }
+  ]
+}
