Fixed UncannyValleyShop mod name

--- a/Mod Container/[SF] UncannyValleyShop/manifest.json
+++ b/Mod Container/[SF] UncannyValleyShop/manifest.json
@@ -1,5 +1,5 @@
 {
-    "Name": "[SF] UncannyValleyShop",
+    "Name": "UncannyValleyShop",
     "Author": "UncannyValley",
     "Version": "0.1.0",
     "Description": "The Wizard Aprrentice's shop from Uncanny Valley.",
