--- a/Mod Container/UncannyValleyMod/manifest.json
+++ b/Mod Container/UncannyValleyMod/manifest.json
@@ -1,16 +1,23 @@
 {
+  "$schema": "https://smapi.io/schemas/manifest.json",
   "Name": "UncannyValleyMod",
   "Author": "UncannyValley",
   "Version": "1.0.1",
   "Description": "Horror mod for Stardew Valley",
   "UniqueID": "UncannyValley.UncannyValleyMod",
   "EntryDll": "UncannyValleyMod.dll",
-  "MinimumApiVersion": "3.0.0",
-  "UpdateKeys": [] ,
+  "MinimumApiVersion": "4.0.0",
+  "UpdateKeys": [],
   "Dependencies": [
     {
       "UniqueID": "Pathoschild.ContentPatcher",
-      "MinimumVersion": "1.30.0"
+      "MinimumVersion": "1.30.0",
+      "IsRequired": true
+    },
+    {
+      "UniqueID": "spacechase0.SpaceCore",
+      "MinimumVersion": "1.21.0",
+      "IsRequired": true
     }
   ]
 }
