Add sword to the adventure's guild shop after first obtaining then reopening the game

--- a/Mod Container/[CP] UncannyValleyQuest/manifest.json
+++ b/Mod Container/[CP] UncannyValleyQuest/manifest.json
@@ -17,6 +17,10 @@
     {
       "UniqueID": "UncannyValley.UncannyValleyMaps",
       "MinimumVersion": "0.0.1"
+    },
+    {
+      "UniqueID": "UncannyValley.UncannyValleyMod",
+      "MinimumVersion": "0.0.1"
     }
   ]
 }
