--- a/Mod Container/[SF] UncannyValleyShop/manifest.json
+++ b/Mod Container/[SF] UncannyValleyShop/manifest.json
@@ -1,18 +1,18 @@
 {
-    "Name": "UncannyValleyShop",
-    "Author": "UncannyValley",
-    "Version": "1.0.0",
-    "Description": "The Wizard Aprrentice's shop from Uncanny Valley.",
-    "UniqueID": "UncannyValley.UncannyValleyShop",
-	"MinimumApiVersion": "3.0.0",
-    "UpdateKeys": [],
+	"$schema": "https://smapi.io/schemas/manifest.json",
+	"Name": "UncannyValleyShop",
+	"Author": "UncannyValley",
+	"Version": "1.0.0-beta",
+	"Description": "The Wizard Aprrentice's shop from Uncanny Valley.",
+	"UniqueID": "UncannyValley.UncannyValleyShop",
+	"MinimumApiVersion": "4.0.0",
+	"UpdateKeys": [ "Nexus:20519@SF" ],
 	"ContentPackFor": {
 		"UniqueID": "Cherry.ShopTileFramework"
 	},
 	"Dependencies": [
 		{
-			"UniqueID": "UncannyValley.UncannyValleyMod",
-			"MinimumVersion": "1.0.1"
+			"UniqueID": "UncannyValley.UncannyValleyMod"
 		}
 	]
 }
