--- a/[CP] UncannyValleyNPCTest/manifest.json
+++ b/[CP] UncannyValleyNPCTest/manifest.json
@@ -8,6 +8,6 @@
    "ContentPackFor": {
        "UniqueID": "Pathoschild.ContentPatcher"
     },
-   "UpdateKeys": [ "" ]
+   "UpdateKeys": [ "Nexus:20519@NPC" ]
    
 }
