--- a/Mod Container/[CP] UncannyValleyQuest/manifest.json
+++ b/Mod Container/[CP] UncannyValleyQuest/manifest.json
@@ -5,7 +5,7 @@
   "Description": "Uncanny Valley Quests",
   "UniqueID": "UncannyValley.UncannyValleyQuest",
   "MinimumApiVersion": "4.0.0",
-  "UpdateKeys": [],
+  "UpdateKeys": [ "Nexus:20519@Quest" ],
   "ContentPackFor": {
     "UniqueID": "Pathoschild.ContentPatcher"
   },
