--- a/Mod Container/[JA] UncannyValleyPotions/manifest.json
+++ b/Mod Container/[JA] UncannyValleyPotions/manifest.json
@@ -2,7 +2,7 @@
 	"$schema": "https://smapi.io/schemas/manifest.json",
 	"Name": "UncannyValleyPotions",
 	"Author": "UncannyValley",
-	"Version": "1.0.0-beta",
+	"Version": "1.0.0",
 	"Description": "UncannyValley's Potions",
 	"UniqueID": "UncannyValley.UncannyValleyPotions",
 	"UpdateKeys": [ "Nexus:20519@JA" ],
